# FileManager

./: .gitignore  CMakeLists.txt  Doxyfile  FileManager.sln  FileManager.vcxproj  FileManager.vcxproj.filters  README.md
.github/workflows/: ci.yml
FileManager/include/: Cache.h  FileManager.h
FileManager/include/Handlers/: AppendFileHandle.h  ReadBinaryFileHandle.h  WriteBinaryFileHandle.h  WriteFileHandle.h
Tests/: CMakeLists.txt
Tests/include/: Functions.h
Tests/src/: Functions.cpp  ReadTests.cpp  WriteTests.cpp
dependencies/ThreadPool/: LICENSE
dependencies/ThreadPool/lib/Windows/debug/: ThreadPool.lib
dependencies/ThreadPool/libs/debug/: ThreadPool.idb  ThreadPool.lib
dependencies/ThreadPool/libs/release/: ThreadPool.lib
docs/: _append_binary_file_handle_8cpp_source.html  _append_binary_file_handle_8h_source.html  _append_file_handle_8cpp_source.html  _append_file_handle_8h_source.html  _base_file_manager_exception_8cpp_source.html  _base_file_manager_exception_8h_source.html  _cache_8cpp_source.html  _cache_8h_source.html  _file_does_not_exist_exception_8cpp_source.html  _file_does_not_exist_exception_8h_source.html  _file_handle_8cpp_source.html  _file_handle_8h_source.html  _file_manager_8cpp_source.html  _file_manager_8h_source.html  _forward_declaration_8h_source.html  _not_a_file_exception_8cpp_source.html  _not_a_file_exception_8h_source.html  _read_binary_file_handle_8cpp_source.html  _read_binary_file_handle_8h_source.html  _read_file_handle_8cpp_source.html  _read_file_handle_8h_source.html  _utility_8cpp_source.html  _utility_8h_source.html  _write_binary_file_handle_8cpp_source.html  _write_binary_file_handle_8h_source.html  _write_file_handle_8cpp_source.html  _write_file_handle_8h_source.html  annotated.html  annotated_dup.js  classes.html  classfile__manager_1_1_append_binary_file_handle-members.html  classfile__manager_1_1_append_binary_file_handle.html  classfile__manager_1_1_append_binary_file_handle.js  classfile__manager_1_1_append_file_handle-members.html  classfile__manager_1_1_append_file_handle.html  classfile__manager_1_1_append_file_handle.js  classfile__manager_1_1_cache-members.html  classfile__manager_1_1_cache.html  classfile__manager_1_1_cache.js  classfile__manager_1_1_file_handle-members.html  (+64 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  concepts_0.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
include/Exceptions/: BaseFileManagerException.h  FileDoesNotExistException.h  NotAFileException.h
include/Handlers/: AppendBinaryFileHandle.h  FileHandle.h
src/: AppendBinaryFileHandle.cpp  AppendFileHandle.cpp  Cache.cpp  Cache.h  FileHandle.cpp  FileManager.cpp  FileManager.h  ForwardDeclaration.h  ReadBinaryFileHandle.cpp  ReadFileHandle.cpp  Utility.cpp  Utility.h  WriteBinaryFileHandle.cpp  WriteFileHandle.cpp
src/Exceptions/: BaseFileManagerException.cpp  BaseFileManagerException.h  FileDoesNotExistException.cpp  FileDoesNotExistException.h  NotAFileException.cpp  NotAFileException.h
src/Handlers/: AppendBinaryFileHandle.cpp  AppendBinaryFileHandle.h  AppendFileHandle.cpp  AppendFileHandle.h  FileHandle.cpp  FileHandle.h  ReadBinaryFileHandle.cpp  ReadBinaryFileHandle.h  ReadFileHandle.cpp  ReadFileHandle.h  WriteBinaryFileHandle.cpp  WriteBinaryFileHandle.h  WriteFileHandle.cpp  WriteFileHandle.h
